--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
   </head>
   <body>
     <section id="landing">
-        <div class="row">
-          <nav>
-            <div class="header__logo">
-                <img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg"alt=""/>
-                <h1>Treact</h1>
-            </div>
-            <div class="nav__links">
-                <ul>
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>Pricing</li>
-                    <li>Contact Us</li>
-                    <li>Login</li>
-                    <li>Sign Up</li>
-                </ul>
-            </div>
-          </nav>
+      <nav>
+        <div class="row nav__row">
+          <div class="nav__logo">
+            <img
+              class="nav__logo--img"
+              src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg"
+              alt=""
+            />
+            <div class="nav__logo--title">Treact</div>
+          </div>
+          <div class="nav__links">
+            <a href="#" class="nav__link">Home</a>
+            <a href="#" class="nav__link">Blog</a>
+            <a href="#" class="nav__link">Pricing</a>
+            <a href="#" class="nav__link">Contact Us</a>
+            <a href="#" class="nav__link">Login</a>
+            <a href="#" class="nav__link">Sign Up</a>
+          </div>
         </div>
+      </nav>
     </section>
   </body>
 </html>
