--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <input
                   type="text"
                   class="header__email--input"
-                  placeholder="Your Email Address"
+                  placeholder="Your E-mail Address"
                 />
                 <button class="header__email--btn">Get Started</button>
               </div>
