features done without css

--- a/index.html
+++ b/index.html
@@ -70,5 +70,124 @@
         </div>
       </header>
     </section>
+
+    <main>
+      <section id="features">
+        <div class="container">
+          <div class="row__narrow">
+            <h4 class="section__tag">FEATURES</h4>
+            <h2 class="section__title">
+              We have Amazing <span class="purple">Service</span>
+            </h2>
+            <div class="section__para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+              nam praesentium eligendi quae debitis totam illum tempore
+              molestiae a provident, rem consequuntur accusantium ullam nisi
+              nobis temporibus voluptatibus illo enim!
+            </div>
+            <div class="features">
+              <div class="feature">
+                <div class="feature__row">
+                  <figure class="feature__img--wrapper">
+                    <img
+                      src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <div class="feature__text">
+                    <h2 class="feature__title">Secure</h2>
+                    <p class="feature__para">
+                      We strictly only deal with vendors that provide top notch
+                      security.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="feature">
+                <div class="feature__row">
+                  <figure class="feature__img--wrapper">
+                    <img
+                      src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <div class="feature__text">
+                    <h2 class="feature__title">24/7 Support</h2>
+                    <p class="feature__para">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius impedit dolorem iure voluptatibus fugiat quia quas doloribus cupiditate! Quas consequatur quia consequuntur earum? Dolor accusamus blanditiis dicta. Explicabo, omnis aut!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="feature">
+                <div class="feature__row">
+                  <figure class="feature__img--wrapper">
+                    <img
+                      src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <div class="feature__text">
+                    <h2 class="feature__title">Customizable</h2>
+                    <p class="feature__para">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, inventore? Esse, culpa reiciendis? Earum magni rem nobis nisi reprehenderit tenetur odio sint distinctio, nulla iusto amet corporis accusantium consectetur provident.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="feature">
+                <div class="feature__row">
+                  <figure class="feature__img--wrapper">
+                    <img
+                      src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <div class="feature__text">
+                    <h2 class="feature__title">Reliable</h2>
+                    <p class="feature__para">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur sit iure sequi nulla iste corporis mollitia ullam voluptatem nemo? Cumque eligendi a necessitatibus? Nulla corrupti animi aliquid veniam veritatis.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="feature">
+                <div class="feature__row">
+                  <figure class="feature__img--wrapper">
+                    <img
+                      src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <div class="feature__text">
+                    <h2 class="feature__title">Fast</h2>
+                    <p class="feature__para">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum assumenda molestiae nam corrupti quo reiciendis eligendi, corporis impedit similique, quis quod vel odio porro eos aliquid inventore? Aperiam, eaque corrupti?
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="feature">
+                <div class="feature__row">
+                  <figure class="feature__img--wrapper">
+                    <img
+                      src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <div class="feature__text">
+                    <h2 class="feature__title">Easy</h2>
+                    <p class="feature__para">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt in numquam fugiat esse, a voluptate ex veritatis quo? Ab itaque animi quos facere et voluptatum. Odio ratione quaerat quibusdam id?
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
   </body>
 </html>
