--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
               We have Amazing <span class="purple">Service</span>
             </h2>
             <div class="section__para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
-              nam praesentium eligendi quae debitis totam illum tempore
-              molestiae a provident, rem consequuntur accusantium ullam nisi
-              nobis temporibus voluptatibus illo enim!
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit sed nobis sint placeat voluptatibus magni nostrum recusandae sunt minus nam.
             </div>
             <div class="features">
               <div class="feature">
@@ -114,7 +111,7 @@
                   <div class="feature__text">
                     <h2 class="feature__title">24/7 Support</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius impedit dolorem iure voluptatibus fugiat quia quas doloribus cupiditate! Quas consequatur quia consequuntur earum? Dolor accusamus blanditiis dicta. Explicabo, omnis aut!
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quae sapiente eos dolorum, dolores distinctio?
                     </p>
                   </div>
                 </div>
@@ -130,7 +127,7 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Customizable</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, inventore? Esse, culpa reiciendis? Earum magni rem nobis nisi reprehenderit tenetur odio sint distinctio, nulla iusto amet corporis accusantium consectetur provident.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatum ipsa accusamus beatae deleniti harum!
                     </p>
                   </div>
                 </div>
@@ -146,7 +143,7 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Reliable</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid aspernatur sit iure sequi nulla iste corporis mollitia ullam voluptatem nemo? Cumque eligendi a necessitatibus? Nulla corrupti animi aliquid veniam veritatis.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tempore repellendus, illo necessitatibus a mollitia?
                     </p>
                   </div>
                 </div>
@@ -162,7 +159,7 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Fast</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum assumenda molestiae nam corrupti quo reiciendis eligendi, corporis impedit similique, quis quod vel odio porro eos aliquid inventore? Aperiam, eaque corrupti?
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum recusandae alias autem at provident iusto?
                     </p>
                   </div>
                 </div>
@@ -178,7 +175,7 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Easy</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt in numquam fugiat esse, a voluptate ex veritatis quo? Ab itaque animi quos facere et voluptatum. Odio ratione quaerat quibusdam id?
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam cum dolores, qui amet dolorem et?
                     </p>
                   </div>
                 </div>
