--- a/index.html
+++ b/index.html
@@ -185,6 +185,26 @@
         </div>
       </section>
 
+      <section id="quality">
+        <div class="container">
+            <div class="row">
+                <div class="quality__description">
+                    <div class="section__tag">QUALITY WORK</div>
+                    <h2 class="section__title">
+                        Designed & Developed by <span class="purple">Professionals.</span>
+                    </h2>
+                    <p class="section__para">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ratione commodi at quas voluptas, amet fugit corrupti sed perspiciatis esse?
+                    </p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <figure class="quality__img--wrapper">
+                    <img src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+                </figure>
+            </div>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
