--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
               We have Amazing <span class="purple">Service</span>
             </h2>
             <div class="section__para">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit sed nobis sint placeat voluptatibus magni nostrum recusandae sunt minus nam.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit
+              sed nobis sint placeat voluptatibus magni nostrum recusandae sunt
+              minus nam.
             </div>
             <div class="features">
               <div class="feature">
@@ -111,7 +113,8 @@
                   <div class="feature__text">
                     <h2 class="feature__title">24/7 Support</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quae sapiente eos dolorum, dolores distinctio?
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Quam quae sapiente eos dolorum, dolores distinctio?
                     </p>
                   </div>
                 </div>
@@ -127,7 +130,9 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Customizable</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatum ipsa accusamus beatae deleniti harum!
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Accusantium voluptatum ipsa accusamus beatae deleniti
+                      harum!
                     </p>
                   </div>
                 </div>
@@ -143,7 +148,8 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Reliable</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tempore repellendus, illo necessitatibus a mollitia?
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Harum tempore repellendus, illo necessitatibus a mollitia?
                     </p>
                   </div>
                 </div>
@@ -159,7 +165,8 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Fast</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum recusandae alias autem at provident iusto?
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Harum recusandae alias autem at provident iusto?
                     </p>
                   </div>
                 </div>
@@ -175,7 +182,8 @@
                   <div class="feature__text">
                     <h2 class="feature__title">Easy</h2>
                     <p class="feature__para">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam cum dolores, qui amet dolorem et?
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam cum dolores, qui amet dolorem et?
                     </p>
                   </div>
                 </div>
@@ -187,75 +195,120 @@
 
       <section id="quality">
         <div class="container">
-            <div class="row">
-                <div class="quality__description">
-                    <div class="section__tag">QUALITY WORK</div>
-                    <h2 class="section__title">
-                        Designed & Developed by <span class="purple">Professionals.</span>
-                    </h2>
-                    <p class="section__para">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ratione commodi at quas voluptas, amet fugit corrupti sed perspiciatis esse?
-                    </p>
-                    <button class="btn">Learn More</button>
-                </div>
-                <figure class="quality__img--wrapper">
-                    <img src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
-                </figure>
+          <div class="row">
+            <div class="quality__description">
+              <div class="section__tag">QUALITY WORK</div>
+              <h2 class="section__title">
+                Designed & Developed by
+                <span class="purple">Professionals.</span>
+              </h2>
+              <p class="section__para">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+                ratione commodi at quas voluptas, amet fugit corrupti sed
+                perspiciatis esse?
+              </p>
+              <button class="btn">Learn More</button>
             </div>
+            <figure class="quality__img--wrapper">
+              <img
+                src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png"
+                alt=""/>
+            </figure>
+          </div>
         </div>
       </section>
 
       <section id="steps">
         <div class="container">
-            <div class="row">
-                <figure class="steps__img--wrapper">
-                    <img src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
-                </figure>
-                <div class="steps__description">
-                    <div class="section__tag">STEPS</div>
-                    <h2 class="section__title">
-                        Easy to <span class="purple">Get Started.</span>
-                    </h2>
-                    <div class="steps__list">
-                        <div class="step">
-                            <div class="step__number">01</div>
-                            <div class="step__description">
-                                <div class="step__title">
-                                    Register
-                                </div>
-                                <p>
-                                    Create an account with us using Google or Facebook.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="step">
-                            <div class="step__number">02</div>
-                            <div class="step__description">
-                                <div class="step__title">
-                                    Download
-                                </div>
-                                <p>
-                                    Browse and Download the template that you like from the marketplace.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="step">
-                            <div class="step__number">03</div>
-                            <div class="step__description">
-                                <div class="step__title">
-                                    Run
-                                </div>
-                                <p>
-                                    Follow the instructions to setup and customize the template to your needs.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+          <div class="row">
+            <figure class="steps__img--wrapper">
+              <img
+                src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png"
+                alt=""
+              />
+            </figure>
+            <div class="steps__description">
+              <div class="section__tag">STEPS</div>
+              <h2 class="section__title">
+                Easy to <span class="purple">Get Started.</span>
+              </h2>
+              <div class="steps__list">
+                <div class="step">
+                  <div class="step__number">01</div>
+                  <div class="step__description">
+                    <div class="step__title">Register</div>
+                    <p class="step__para">
+                      Create an account with us using Google or Facebook.
+                    </p>
+                  </div>
                 </div>
+                <div class="step">
+                  <div class="step__number">02</div>
+                  <div class="step__description">
+                    <div class="step__title">Download</div>
+                    <p class="step__para">
+                      Browse and Download the template that you like from the
+                      marketplace.
+                    </p>
+                  </div>
+                </div>
+                <div class="step">
+                  <div class="step__number">03</div>
+                  <div class="step__description">
+                    <div class="step__title">Run</div>
+                    <p class="step__para">
+                      Follow the instructions to setup and customize the
+                      template to your needs.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
       </section>
 
+      <section id="values">
+        <div class="container">
+          <div class="row">
+            <div class="values__description"></div>
+            <div class="section__tag">VALUES</div>
+            <h2 class="section__title">
+              We Always Abide by Our <span class="purple">Principles.</span>
+            </h2>
+            <div class="section__para">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam omnis itaque hic similique consectetur quasi nulla voluptates iste minus dolor.
+            </div>
+            <div class="values__list">
+              <div class="value">
+                <div class="value__title">
+                  <figure class="value__img--wrapper"></figure>
+                </div>
+                <div class="value__name">
+                  Affordable
+                </div>
+                <div class="value__para">
+                  We promise to offer you the best rate we can - at par with the industry standard.
+                </div>
+              </div>
+              <div class="value">
+                <div class="value__title">
+                  <figure class="value__img--wrapper"></figure>
+                </div>
+                <div class="value__name">
+                  Professionalism
+                </div>
+                <div class="value__para">
+                  We assure you that our templates are designed and created by professional designers.
+                </div>
+              </div>
+              <button class="btn">Learn More</button>
+            </div>
+            <img src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+          </div>
+        </div>
+      </section>
+      
     </main>
   </body>
 </html>
