--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
             <figure class="quality__img--wrapper">
               <img
                 src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png"
-                alt=""/>
+                alt=""
+              />
             </figure>
           </div>
         </div>
@@ -271,40 +272,45 @@
       <section id="values">
         <div class="container">
           <div class="row">
-            <div class="values__description"></div>
-            <div class="section__tag">VALUES</div>
-            <h2 class="section__title">
-              We Always Abide by Our <span class="purple">Principles.</span>
-            </h2>
-            <div class="section__para">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam omnis itaque hic similique consectetur quasi nulla voluptates iste minus dolor.
-            </div>
-            <div class="values__list">
-              <div class="value">
-                <div class="value__title">
-                  <figure class="value__img--wrapper"></figure>
-                </div>
-                <div class="value__name">
-                  Affordable
-                </div>
-                <div class="value__para">
-                  We promise to offer you the best rate we can - at par with the industry standard.
-                </div>
+            <div class="values__description">
+              <div class="section__tag">VALUES</div>
+              <h2 class="section__title">
+                We Always Abide by Our <span class="purple">Principles.</span>
+              </h2>
+              <div class="section__para">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Quisquam omnis itaque hic similique consectetur quasi nulla
+                voluptates iste minus dolor.
               </div>
-              <div class="value">
-                <div class="value__title">
-                  <figure class="value__img--wrapper"></figure>
+              <div class="values__list">
+                <div class="value">
+                  <div class="value__title">
+                    <figure class="value__img--wrapper"></figure>
+                  </div>
+                  <div class="value__name">Affordable</div>
+                  <div class="value__para">
+                    We promise to offer you the best rate we can - at par with
+                    the industry standard.
+                  </div>
                 </div>
-                <div class="value__name">
-                  Professionalism
-                </div>
-                <div class="value__para">
-                  We assure you that our templates are designed and created by professional designers.
+                <div class="value">
+                  <div class="value__title">
+                    <figure class="value__img--wrapper"></figure>
+                  </div>
+                  <div class="value__name">Professionalism</div>
+                  <div class="value__para">
+                    We assure you that our templates are designed and created by
+                    professional designers.
+                  </div>
                 </div>
               </div>
               <button class="btn">Learn More</button>
             </div>
-            <img src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+            <img
+              src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg"
+              class="values__img"
+              alt=""
+            />
           </div>
         </div>
       </section>
