testimonials no css

--- a/index.html
+++ b/index.html
@@ -323,7 +323,9 @@
               Reasonable and Flexible <span class="purple">Plans.</span>
             </h2>
             <p class="section__para">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam perferendis, vel dolorem temporibus qui beatae atque corrupti in facere aperiam.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+              perferendis, vel dolorem temporibus qui beatae atque corrupti in
+              facere aperiam.
             </p>
             <div class="plans">
               <div class="plan">
@@ -378,6 +380,84 @@
                 </div>
                 <div class="plan__bottom">
                   <button class="plan__button">BUY NOW</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="testimonials">
+        <div class="container">
+          <div class="row">
+            <img
+              src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg"
+              class="testimonials__img"
+              alt=""
+            />
+            <div class="testimonials__description">
+              <div class="section__tag">TESTIMONIALS</div>
+              <h2 class="section__title">
+                Our Clients <span class="purple">Love Us.</span>
+              </h2>
+              <p class="section__para">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque
+                ad laudantium, dignissimos rerum ullam vitae ex est impedit
+                inventore cum!
+              </p>
+              <div class="testimonial">
+                <div class="testimonial__rating">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>
+                <div class="testimonial__title">Amazing User Experience</div>
+                <p class="testimonial__para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum, doloribus, quae repellendus animi mollitia eum ad
+                  maxime veniam nisi ratione quia fuga illum voluptates quas rem
+                  nihil amet, perspiciatis fugiat?
+                </p>
+                <div class="testimonial__bottom">
+                  <div class="testimonial__profile">
+                    <img
+                      src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=3.25&amp;w=512&amp;h=512&amp;q=80"
+                      class="testimonial__img"
+                      alt=""
+                    />
+                    <div class="testimonial__details">
+                      <div class="testimonial__name">Charlotte Hale</div>
+                      <div class="testimonial__role">Director, Delos Inc.</div>
+                    </div>
+                  </div>
+                  <div class="testimonial__buttons">
+                    <button class="testimonial__button">
+                      <svg
+                        fill="none"
+                        stroke="rgb(100,21,255)"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="3"
+                        viewBox="0 0 24 24"
+                      >
+                        <path d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                      </svg>
+                    </button>
+                    <div class="divider"></div>
+                    <button class="testimonial__button">
+                      <svg
+                        fill="none"
+                        stroke="rgb(100,21,255)"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="3"
+                        viewBox="0 0 24 24">
+                        <path d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                      </svg>
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
