--- a/index.html
+++ b/index.html
@@ -464,6 +464,14 @@
           </div>
         </div>
       </section>
+
+      <section id="start">
+        <div class="container">
+          <div class="row">
+            
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
