--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/c4651fd702.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </head>
   <body>
 
@@ -35,19 +36,19 @@
       </nav>
 
       <div class="modal">
-        <button class="btn__menu btn__menu--close" onclick="openMenu()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="light___StyledCloseIcon-lj69nl-14 fASujC">
-            <line x1="18" y1="6" x2="6" y2="18"></line>
-            <line x1="6" y1="6" x2="18" y2="18"></line>
-        </svg>
+        <button class="btn__menu menu--open" onclick="openMenu()">
+          <i class="fa-solid fa-bars"></i>
+      </button>
+      <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+        <i class="fa-solid fa-times"></i>
       </button>
       <div class="modal__links">
-        <a class="modal__link">About</a>
-        <a class="modal__link">Blog</a>
-        <a class="modal__link">Pricing</a>
-        <a class="modal__link">Contact Us</a>
-        <a class="modal__link">Login</a>
-        <a class="modal__link modal__link--primary">Sign Up</a>
+        <a class="modal__link" onclick="closeMenu()">About</a>
+        <a class="modal__link" onclick="closeMenu()">Blog</a>
+        <a class="modal__link" onclick="closeMenu()">Pricing</a>
+        <a class="modal__link" onclick="closeMenu()">Contact Us</a>
+        <a class="modal__link" onclick="closeMenu()">Login</a>
+        <a class="modal__link modal__link--primary" onclick="closeMenu()">Sign Up</a>
     </div>
       </div>
 
