--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
 
       <div class="modal">
-        <button class="btn__menu menu--open" onclick="openMenu()">
+        <button class="btn__menu btn__menu--open" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i>
       </button>
       <button class="btn__menu btn__menu--close" onclick="closeMenu()">
